src/App.css
/* ... */
.project-tile:hover .image-title {
  transform: translateY(0px);
  visibility: visible;
}

.project-tile {
  /* max-width: 500px; */
  display: inline-block;
  overflow: hidden;
}

/********************* Button Styles *********************/

.button {
  font-family: var(--paragraph-font);
  margin: 20px;
  padding: 20px 20px;
  font-weight: 800;
  font-size: 15px;
  text-transform: uppercase;
  letter-spacing: 4px;
  border-radius: 40px;
  color: white;
  justify-content: center;
  align-items: center;
  border: none;
  background-color: transparent;
  width: 300px;
}

/* .button:hover {
  text-decoration: none;
  color: white;
} */

.button:focus {
  border: none;
}

.gradient {
  background: linear-gradient(217deg, var(--gradient-one), var(--gradient-two));
  background-size: 200%;
  background-position-x: 99%;
  transition: 0.35s;
  color: white;
}

.gradient:hover {
  background-position-x: 0%;
  transition: 0.35s;
  color: white;
}

/********************* Footer Styles *********************/

footer {
  padding: 80px 100px 50px 100px;
  background-color: white;
  color: black;
  min-height: 20vh;
}

footer .button {
  color: black;
  font-size: 18px;
}

#footer-logo {
  width: 80px;
  margin-bottom: 50px;
}

.white #footer-logo {
  fill: white;
}

#credit {
  margin: 0 auto;
  padding: 120px 0 0 0;
  font-family: var(--paragraph-font);
  font-size: 18px;
}

.white #credit a {
  color: white;
  white-space: nowrap;
}

#credit a {
  color: black;
  font-weight: 500;
}

/********************* Header Styles *********************/

#logo {
  max-width: 70px;
  fill: white;
  position: fixed;
  top: 50px;
  left: 40px;
  transition: all 0.25s ease-in-out;
  z-index: 2;
}

.white #logo {
  fill: black;
}

#toggle-background {
  padding: 10px;
  position: fixed;
  right: 40px;
  bottom: 50px;
  z-index: 1;
  width: 100px;
  height: 50px;
  cursor: pointer;
}

#toggle-icon {
  border-radius: 20px;
  width: 30px;
  height: 30px;
  background-color: white;
  position: absolute;
  transition: all 0.5s ease-in-out;
  margin-left: 0px;
}

#toggle-background.white #toggle-icon {
  margin-left: 45px;
}

.hidden {
  opacity: 0;
}

/********************* Menu Styles *********************/

#menu-body {
  background-color: var(--background-dark);
  width: 100vw;
  height: 100vh;
  z-index: 1;
  position: fixed;
  left: 0;
  top: 0;
  transition: 0.25s;
  display: none;
  opacity: 0;
}

#menu-list {
  padding-top: 10vh;
  border-left: solid 3px black;
  height: 100vh;
}

#menu-list li {
  list-style: none;
  text-align: left;
}

.App.white #menu-body {
  background-color: white;
  color: black;
}

.stack-text {
  display: block;
  transition: transform 0.25s ease-in-out;
}

#site-name {
  position: fixed;
  top: 85px;
  left: 130px;
  font-family: var(--paragraph-font), sans-serif;
  text-transform: uppercase;
  font-weight: 700;
  letter-spacing: 2px;
  color: white;
}

.App.white #site-name {
  color: black;
}

#site-name span {
  font-weight: 100;
}

.menu-item {
  margin: 6vh;
  /* background-color: yellow; */
  height: 80px;
  line-height: 80px;
  transition: transform 1s ease-in-out;
  overflow: hidden;
  display: inline-block;
  float: left;
  clear: both;
}

li.menu-item:hover .stack-text {
  transform: translateY(-80px);
}

/********************* Home Page Styles *********************/

#intro {
  max-width: 710px;
  margin: 0px auto 100px auto;
  padding: 100px 0 100px 0;
}

/********************* About Page Styles *********************/

.about {
  max-width: 1100px;
  margin: 0px auto;
  padding: 50px 0;
}

.about a {
  color: inherit;
}

.index {
  position: absolute;
  margin-left: -30px;
  margin-top: -20px;
  font-size: 22px;
  font-family: var(--paragraph-font), sans-serif;
  font-weight: 700;
  color: #575d69;
  display: block;
  letter-spacing: 2px;
}

.menu-link {
  text-decoration: none;
  color: inherit;
}

.menu-link span {
  font-weight: 300;
}

.menu-link:hover {
  text-decoration: none;
  color: inherit;
}

.menu-link.active span {
  background: linear-gradient(217deg, var(--gradient-one), var(--gradient-two));
  background-clip: text;
  -webkit-background-clip: text;
  -moz-background-clip: text;
  -webkit-text-fill-color: transparent;
  -moz-text-fill-color: transparent;
}

#menu-toggle {
  background-color: transparent;
  width: 55px;
  height: 55px;
  position: fixed;
  top: 60px;
  right: 60px;
  border-radius: 30px;
  transition: all 0.5s ease-in-out;
  cursor: pointer;
  z-index: 2;
  padding-top: 6px;
  padding-left: 2px;
}

.bar {
  z-index: 0;
  margin: 8px auto;
  width: 40px;
  height: 5px;
  background-color: white;
  border-radius: 5px;
  transition: all 0.25s ease-in-out;
}

/* .bar.b {
  height: 4px;
} */

.a,
.c {
  width: 20px;
}

#menu-toggle:hover .a,
#menu-toggle:hover .c {
  width: 40px;
}

/* #menu-toggle:hover {
  padding-top: 8px;
  background-color: #adadad;
}

#menu-toggle:hover .bar {
  margin: 6px auto;
  width: 45px;
  transform: scale(50%);
} */

/* #menu-toggle:hover .a,
#menu-toggle:hover .c {
  width: 40px;
} */

.App.white .bar {
  background-color: black;
}

.ex {
  transform-origin: 0;
}

.open .a {
  transform: translateY(13px) rotate(45deg);
  width: 40px;
}

.open .c {
  transform: translateY(-13px) rotate(-45deg);
  width: 40px;
}

.open .b {
  transform: scale(0);
}

.open #menu-toggle :hover {
  transform: none;
}

.open .b {
  transform: scale(0);
}

.ceramics-intro {
  max-width: 800px;
  padding: 100px 0px 50px 15px;
  text-align: left;
}

.work-intro {
  text-align: left;
}

.work-intro .button {
  text-align: left;
  margin-left: 0px;
}

.work-intro h4 {
  max-width: 950px;
  padding: 120px 0px 20px 0px;
}

.work-intro p {
  max-width: 935px;
  padding: 20px 0px 20px 0px;
}

/* .work-intro a {
  color: inherit;
} */

#work-main a {
  color: white;
}

.App.white #work-main a {
  color: black;
}
/* ... */

